updated settings and template addition